# ScienceHelper

./: .$result.drawio.dtmp  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.ini  image_processing.py  main.py  pyproject.toml  requirements.txt  setting.py
.github/workflows/: build-and-push.yml  ci.yaml  docker.yaml  docker.yml  tests-and-merge.yml
image_processing/: DrawioProcessing.py  ImageProcessing.py  __init__.py  enumerates.py  imageDesign.py  isoPage.py
pages/: analysis_page.py  image_processing_page.py  settings_page.py
science_helper/image_processing/: __init__.py  drawio_processing.py  enumerates.py  image_design.py  processing.py
science_helper/search_vak_articles/: __init__.py  downloader.py  filters.py  nomenclature.py  pdf_parser.py
science_helper/utils/: setting.py
test/: test_drawio_image_design.py  test_image_design.py
utils/: __init__.py  downloader.py  pdf_parser.py
web/pages/: analysis_page.py  image_processing_page.py  settings_page.py
