[project]
name = "science-helper"
version = "0.1.0"
description = "Инструменты для помощи оформления научных работ"
authors = [
    { name = "Daniel", email = "grabardm@ml-dev.ru" }
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["venv", ".venv", "build", "dist", "data", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "I",
    "N",
    "D",
    "UP",
    "C90",
    "PL",
    "RUF",
]
ignore = [
    "D100",
    "D104",
    "RUF001",
    "RUF002",
]

[tool.ruff.lint.isort]
known-first-party = ["science_helper"]
force-sort-within-sections = true
lines-after-imports = 2
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
